tests/transpiler/x/clj/partial_application.clj
;; Generated by Mochi v0.10.31 on 2025-07-20 09:41:43 GMT+7
(ns main)

(def add5 (add 5))

(defn -main []
  (defn add [a b]
    (+ a b))
  (println (add5 3)))

(-main)
